# zkay-rs

./: .gitignore  Cargo.toml  README.md  input.json  input2.json  rustc-ice-2026-01-10T08_55_47-52888.txt  rustc-ice-2026-01-10T09_02_01-70470.txt  survey.zkay
zkay-derive/: Cargo.toml
zkay-derive-core/: Cargo.toml
zkay-derive-core/src/: lib.rs
zkay-derive/src/: lib.rs
zkay-derive/tests/: impltrait.rs  isvariant.rs  tests.rs
zkay-rsnark/: Cargo.toml  circuit.arith  circuit.in
zkay-rsnark/ff/: .gitignore  Cargo.toml
zkay-rsnark/ff-curves/: Cargo.toml
zkay-rsnark/ff-curves/src/: lib.rs
zkay-rsnark/ff-curves/src/algebra/: mod.rs
zkay-rsnark/ff-curves/src/common/: mod.rs
zkay-rsnark/ff-macros/: Cargo.toml
zkay-rsnark/ff-macros/src/: lib.rs  unroll.rs  utils.rs
zkay-rsnark/ff-macros/src/montgomery/: biginteger.rs  mod.rs
zkay-rsnark/ff/benches/: fp_bench.rs
zkay-rsnark/ff/src/: lib.rs
zkay-rsnark/ff/src/algebra/: const_helpers.rs  mod.rs  to_field_vec.rs
zkay-rsnark/ff/src/common/: double.rs  mod.rs  profiling.rs  rng.rs  serialization.rs  template_utils.rs  utils.rs
zkay-rsnark/fqfft/: Cargo.toml
zkay-rsnark/fqfft/src/: lib.rs
zkay-rsnark/fqfft/src/evaluation_domain/: evaluation_domain.rs  get_evaluation_domain.rs  mod.rs
zkay-rsnark/fqfft/src/kronecker_substitution/: kronecker_substitution.rs  mod.rs
zkay-rsnark/fqfft/src/polynomial_arithmetic/: basic_operations.rs  basis_change.rs  mod.rs  naive_evaluate.rs  xgcd.rs
zkay-rsnark/fqfft/src/profiling/: mod.rs  profiling_menu.rs
zkay-rsnark/fqfft/src/tests/: evaluation_domain_test.rs  init_test.rs  kronecker_substitution_test.rs  mod.rs  polynomial_arithmetic_test.rs
zkay-rsnark/fqfft/src/tools/: exceptions.rs  mod.rs  serialization.rs
zkay-rsnark/poly/: Cargo.toml
zkay-rsnark/poly/benches/: dense_multilinear.rs  dense_uv_polynomial.rs  fft.rs  sparse_multilinear.rs
zkay-rsnark/poly/src/: lib.rs  test.rs
zkay-rsnark/poly/src/domain/: general.rs  mixed_radix.rs  mod.rs  utils.rs
zkay-rsnark/poly/src/polynomial/: mod.rs
zkay-rsnark/rsnark/: Cargo.toml
zkay-rsnark/rsnark/src/: lib.rs  main.rs
zkay-rsnark/rsnark/src/common/: libsnark_serialization.rs  mod.rs
zkay-rsnark/rsnark/src/gadgetlib1/: constraint_profiling.rs  gadget.rs  mod.rs  pb_variable.rs  protoboard.rs
zkay-rsnark/rsnark/src/gadgetlib2/: adapters.rs  constraint.rs  gadget.rs  gadgetMacros.rs  infrastructure.rs  integration.rs  mod.rs  pp.rs  protoboard.rs  variable.rs  variable_operators.rs
zkay-rsnark/rsnark/src/jsnark_interface/: circuit_parser.rs  circuit_reader.rs  mod.rs  run_ppzksnark.rs  util.rs
zkay-rsnark/src/: lib.rs
zkay-rsnark/src/bouncycastle_rs/: Cargo.toml  mod.rs  rename.sh
zkay-rsnark/src/circuit/: mod.rs
zkay-rsnark/src/examples/: mod.rs
zkay-rsnark/src/util/: big_int_storage.rs  build_circuit_timer.rs  mod.rs  run_command.rs  util.rs
zkay-rsnark/src/zkay/: chaskey_lts_cbc.rs  chaskey_lts_engine.rs  homomorphic_input.rs  mod.rs  typed_wire.rs  zkay_baby_jub_jub_gadget.rs  zkay_cbc_symmetric_enc_gadget.rs  zkay_circuit_base.rs  zkay_dummy_encryption_gadget.rs  zkay_dummy_hom_encryption_gadget.rs  zkay_ec_gadget.rs  zkay_ec_pk_derivation_gadget.rs  zkay_ecdh_gadget.rs  zkay_ecdh_generator.rs  zkay_elgamal_add_gadget.rs  zkay_elgamal_dec_gadget.rs  zkay_elgamal_enc_gadget.rs  zkay_elgamal_mul_gadget.rs  zkay_elgamal_rerand_gadget.rs  zkay_paillier_dec_gadget.rs  zkay_paillier_enc_gadget.rs  zkay_paillier_fast_dec_gadget.rs  zkay_paillier_fast_enc_gadget.rs  zkay_rsa_encryption_gadget.rs  zkay_sha256_gadget.rs  zkay_type.rs  zkay_util.rs
zkay-rsnark/supercop/: Cargo.toml
zkay-rsnark/supercop/src/: lib.rs  randombytes.rs
zkay-rsnark/test-curves/: Cargo.toml
zkay-rsnark/test-curves/benches/: bls12_381.rs  bn384_small_two_adicity.rs  mnt4_753.rs
zkay-rsnark/test-curves/src/: fp128.rs  lib.rs
zkay_rs/: Cargo.toml
zkay_rs/ast-builder/: Cargo.toml
zkay_rs/ast-builder/src/: build_ast.rs  lib.rs  process_ast.rs
zkay_rs/compiler/: Cargo.toml
zkay_rs/compiler/privacy/: Cargo.toml
zkay_rs/compiler/solidity/: Cargo.toml
zkay_rs/compiler/src/: lib.rs  name_remapper.rs
zkay_rs/config/: Cargo.toml
zkay_rs/config/src/: config.rs  config_user.rs  config_version.rs  lib.rs  meta.rs
zkay_rs/errors/: Cargo.toml
zkay_rs/errors/src/: exceptions.rs  lib.rs
zkay_rs/examples/: Cargo.toml
zkay_rs/examples/src/: example_scenarios.rs  examples.rs
zkay_rs/jsnark_interface/: Cargo.toml  run_snark
zkay_rs/jsnark_interface/src/: jsnark_interface.rs  libsnark_interface.rs
zkay_rs/my_logging/: Cargo.toml
zkay_rs/my_logging/src/: log_context.rs  logger.rs
zkay_rs/solidity_parser/: Cargo.toml  Makefile
zkay_rs/solidity_parser/src/: emit.rs  lib.rs  parse.rs
zkay_rs/src/: config.rs  contract.rs  debug.rs  main.rs  tx.rs  zkay.rs  zkay_frontend.rs
zkay_rs/src/cmd/: call.rs  compile.rs  create.rs  deploy.rs  estimate.rs  mod.rs  rpc.rs  send.rs
zkay_rs/src/tests/: mod.rs
zkay_rs/tests/: zkay_unit_test.rs
zkay_rs/tests/analysis/: test_side_effects.rs
zkay_rs/tests/compiler/: test_solidity_compiler.rs
zkay_rs/tests/parser/: test_parse.rs
zkay_rs/tests/utils/: test_helpers.rs  test_logger.rs  test_run_command.rs
zkay_rs/tests/zkay_ast/: test_ast.rs  test_build_ast.rs  test_parent_setter.rs  test_process_ast.rs  test_symbol_table.rs
zkay_rs/transaction/: Cargo.toml
zkay_rs/transaction/blockchain/: Cargo.toml
zkay_rs/transaction/crypto/: Cargo.toml
zkay_rs/transaction/keystore/: Cargo.toml
zkay_rs/transaction/prover/: Cargo.toml
zkay_rs/transaction/src/: int_casts.rs  interface.rs  lib.rs  offchain.rs  runtime.rs  solidity_math.rs  types.rs
zkay_rs/type_check/: Cargo.toml
zkay_rs/type_check/src/: contains_private.rs  final_checker.rs  type_checker.rs
zkay_rs/utils/: Cargo.toml
zkay_rs/utils/src/: helpers.rs  lib.rs  multiline_formatter.rs  progress_printer.rs  run_command.rs  timer.rs
zkay_rs/zkay_ast/: Cargo.toml
zkay_rs/zkay_ast/src/: ast.rs  build_ast.rs  circuit_constraints.rs  global_defs.rs  homomorphism.rs  lib.rs  process_ast.rs
(+1154 files in other folders)
