[workspace]
resolver = "2"
members = [
    "rccell",
    "babyjubjub-rs",
    "babygiant-alt-bn128",
    "zkay_rs",
    "zkay-derive",
    "zkay-derive-core",
    "zkay-rsnark",
    "zkay-rsnark/ff",
    "zkay-rsnark/supercop",
    "zkay-rsnark/ff-curves",
    "zkay-rsnark/ff-macros",
    "zkay-rsnark/fqfft",
    "zkay-rsnark/rsnark",
    "zkay-rsnark/poly",
    "zkay-rsnark/test-curves",
    "zkay_rs/compiler/privacy/circuit_generation/circuit_helper",
    "zkay_rs/compiler/privacy/circuit_generation/circuit_helper_config",
    "zkay_rs/compiler/privacy/circuit_generation",
    # "zkay_rs/compiler/privacy/proving_scheme/backends",
    "zkay_rs/compiler/privacy/proving_scheme",
    "zkay_rs/compiler/privacy/transformation",
    "zkay_rs/compiler/privacy",
    "zkay_rs/compiler/solidity",
    "zkay_rs/compiler",
    "zkay_rs/config",
    "zkay_rs/errors",
    "zkay_rs/examples",
    "zkay_rs/jsnark_interface",
    "zkay_rs/my_logging",
    "zkay_rs/solidity_parser",
    "zkay_rs/transaction",
    # "zkay_rs/transaction/crypto",
    "zkay_rs/transaction/crypto/params",
    # "zkay_rs/transaction/types",
    "zkay_rs/type_check",
    "zkay_rs/utils",
    "zkay_rs/zkay_ast",
    "zkay_rs/ast-builder",
    "zkay-rsnark",
]
exclude = []

[workspace.package]
edition = "2024"
authors = ["Sam Lee <arron202212@gmail.com>"]
homepage = "https://github.com/arron202212"
license = "MIT"
publish = false
repository = "https://github.com/arron202212/zkay-rs.git"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# proc-macro = true
[workspace.dependencies]
rccell = { path = "rccell" }
babyjubjub-rs = { path = "babyjubjub-rs" }
babygiant-alt-bn128 = { path = "babygiant-alt-bn128" }
zkay-derive = { path = "zkay-derive" }
zkay-derive-core = { path = "zkay-derive-core" }
circuit_helper = { path = "zkay_rs/compiler/privacy/circuit_generation/circuit_helper" }
circuit-helper-config = { path = "zkay_rs/compiler/privacy/circuit_generation/circuit_helper_config" }
circuit_generation = { path = "zkay_rs/compiler/privacy/circuit_generation" }
#  proving_scheme_backends={path="zkay_rs/compiler/privacy/proving_scheme/backends"}
proving_scheme = { path = "zkay_rs/compiler/privacy/proving_scheme" }
transformation = { path = "zkay_rs/compiler/privacy/transformation" }
privacy = { path = "zkay_rs/compiler/privacy" }
solidity = { path = "zkay_rs/compiler/solidity" }
zkay-compiler = { path = "zkay_rs/compiler" }
zkay-config = { path = "zkay_rs/config" }
zkay-errors = { path = "zkay_rs/errors" }
zkay-examples = { path = "zkay_rs/examples" }
jsnark_interface = { path = "zkay_rs/jsnark_interface" }
my_logging = { path = "zkay_rs/my_logging" }
solidity_parser = { path = "zkay_rs/solidity_parser" }
zkay-transaction = { path = "zkay_rs/transaction" }
#  zkay-transaction-crypto={path="zkay_rs/transaction/crypto"}
zkay-transaction-crypto-params = { path = "zkay_rs/transaction/crypto/params" }
#  zkay-transaction-types={path="zkay_rs/transaction/types"}
type_check = { path = "zkay_rs/type_check" }
zkay-utils = { path = "zkay_rs/utils" }
zkay_ast = { path = "zkay_rs/zkay_ast" }
ast-builder = { path = "zkay_rs/ast-builder" }
zkay_rs = { path = "zkay_rs" }
ffec = { path = "zkay-rsnark/ff" }
supercop = { path = "zkay-rsnark/supercop" }
ff-curves = { path = "zkay-rsnark/ff-curves" }
test-curves = { path = "zkay-rsnark/test-curves" }
poly = { path = "zkay-rsnark/poly" }
ff-macros = { path = "zkay-rsnark/ff-macros" }
fqfft = { path = "zkay-rsnark/fqfft" }
rsnark = { path = "zkay-rsnark/rsnark" }
zkay-rsnark = { path = "zkay-rsnark" }
async-trait = "0.1.68"
clap = { version = "4.4.10", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
    "string"
] }
lazy_static = "1.4.0"
antlr-rust = { version = "0.3.0-beta" }
anyhow = "1.0.75"
path-absolutize = "3.1.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["arbitrary_precision"] }
serde_repr = "0.1.12"
regex = "1.10.2"
semver_rs = "0.2"
app_dirs2 = "2.5.5"
walkdir = "2"
# solc={git="https://github.com/g-r-a-n-t/solc-rust",branch="master"}
# solc={git="https://github.com/Zokrates/solc-rust.git",branch="master"}
zkp-u256 = { git = "https://github.com/patractlabs/OpenZKP", branch = "master" }
# forge = { git = "https://github.com/foundry-rs/foundry.git", branch = "master",package="forge" }
trait-variant = "0.1.2"
ethnum = "1"
textwrap = "0.16.2"
eyre = "0.6.8"
nohash-hasher = "0.2.0"
num_cpus = "1.16.0"
rayon = "1.8"
once_cell = "1.19"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
hex = "0.4.3"
rs_sha512 = "0.1.3"
log = "0.4.10"
env_logger = "0.10.1"
chrono = "0.4.31"
bitflags = "2.4.2"
dyn-clone = "1.0.16"
heck = "0.4.1"
quote = "1.0.35"
syn = "2.0.50"
nom="8.0.0"
proc-macro2 = "1.0"
convert_case = "0.6.0"
enum_dispatch = "0.3.13"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
fancy-regex = "0.13.0"
bevy_reflect = "0.14.1"
num_enum = "0.7.3"
backtrace-on-stack-overflow = "0.3.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-ed-on-bn254 = "0.5.0"
ark-std = { version = "0.5.0", default-features = false }
ark-r1cs-std = { version = "0.5.0", default-features = false }
# ark-ff-asm = { version = "0.5.0" }
ark-ff-macros = { version = "0.5.0" }
ark-poly = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }
ark-serialize-derive = { version = "0.5.0" }
ark-algebra-bench-templates = { version = "0.5.0", default-features = false }
ark-algebra-test-templates = { version = "0.5.0", default-features = false }
ark-test-curves = { version = "0.5.0", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = [
    "inline-more",
    "allocator-api2",
] }
arrayvec = { version = "0.7", default-features = false }
criterion = "0.5.0"
# educe = "0.6.0"
digest = { version = "0.10", default-features = false }
# hashbrown = { version = "0.15", default-features = false, features = [
#     "inline-more",
#     "allocator-api2",
# ] }
# hex = "0.4"
# itertools = { version = "0.13", default-features = false }
libtest-mimic = "0.8.1"
zeroize = "1.8.2"
educe = "0.6.0"
rustc-serialize = "~0.3.19"
futures = "0.3.12"
num-bigint = { version = "0.4", features = ["rand"] }
ff = { package = "ff_ce", version = "0.11", features = ["derive"] }
num-complex = "0.4"
num-traits = "0.2.8"
num-derive = "0.4"
num-integer = { version = "0.1", default-features = false }
# anvil = { path = "crates/anvil" }
cast = { git = "https://github.com/foundry-rs/foundry.git", branch = "master", package = "cast" }
# chisel = { path = "crates/chisel" }
# forge = { path = "crates/forge" }
# forge-doc = { path = "crates/doc" }
# forge-fmt = { path = "crates/fmt" }
forge-verify = { git = "https://github.com/foundry-rs/foundry.git", branch = "master", package = "forge-verify" }
# forge-script = { path = "crates/script" }
# forge-sol-macro-gen = { path = "crates/sol-macro-gen" }
# forge-script-sequence = { path = "crates/script-sequence" }
# foundry-cheatcodes = { path = "crates/cheatcodes" }
# foundry-cheatcodes-spec = { path = "crates/cheatcodes/spec" }
foundry-cli = { git = "https://github.com/foundry-rs/foundry.git", branch = "master", package = "foundry-cli" }
foundry-common = { git = "https://github.com/foundry-rs/foundry.git", branch = "master", package = "foundry-common" }
foundry-primitives = { git = "https://github.com/foundry-rs/foundry.git", branch = "master", package = "foundry-primitives" }
# foundry-common-fmt = { path = "crates/common/fmt" }
foundry-config = { git = "https://github.com/foundry-rs/foundry.git", branch = "master", package = "foundry-config" }
foundry-debugger = { git = "https://github.com/foundry-rs/foundry.git", branch = "master", package = "foundry-debugger" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry.git", branch = "master", package = "foundry-evm" }
# foundry-evm-abi = { path = "crates/evm/abi" }
# foundry-evm-core = { path = "crates/evm/core" }
# foundry-evm-coverage = { path = "crates/evm/coverage" }
# foundry-evm-fuzz = { path = "crates/evm/fuzz" }
# foundry-evm-traces = { path = "crates/evm/traces" }
# foundry-macros = { path = "crates/macros" }
# foundry-test-utils = { path = "crates/test-utils" }
foundry-wallets = { git = "https://github.com/foundry-rs/foundry.git", branch = "master", package = "foundry-wallets" }
# foundry-linking = { path = "crates/linking" }
# # solc & compilation utilities
# foundry-block-explorers = { version = "0.7.3", default-features = false }
foundry-compilers = { version = "0.19.14", default-features = false, features = [
    "rustls",
    "svm-solc",
] }
# foundry-fork-db = "0.6.0"
# solang-parser = "=0.3.3"
# ## revm
# revm = { version = "17.1.0", default-features = false }
# revm-primitives = { version = "13.0.0", default-features = false }
# revm-inspectors = { version = "0.10.0", features = ["serde"] }
# ## ethers
# ethers-contract-abigen = { version = "2.0.14", default-features = false }
solar = { package = "solar-compiler", version = "=0.1.8", default-features = false }
# ## alloy
alloy-consensus = { version = "2.0.0-rc.0", default-features = false }
alloy-ens = { version = "2.0.0-rc.0", default-features = false }
# alloy-contract = { version = "2.0.0-rc.0", default-features = false }
alloy-eips = { version = "2.0.0-rc.0", features = ["kzg"] }
# alloy-genesis = { version = "2.0.0-rc.0", default-features = false }
# alloy-json-rpc = { version = "2.0.0-rc.0", default-features = false }
alloy-network = { version = "2.0.0-rc.0", default-features = false }
alloy-provider = { version = "=2.0.0-rc.0", default-features = false }
# alloy-pubsub = { version = "2.0.0-rc.0", default-features = false }
# alloy-rpc-client = { version = "2.0.0-rc.0", default-features = false }
alloy-rpc-types = { version = "2.0.0-rc.0", default-features = true }
alloy-serde = { version = "2.0.0-rc.0", default-features = false }
alloy-signer = { version = "2.0.0-rc.0", default-features = false }
# alloy-signer-aws = { version = "2.0.0-rc.0", default-features = false }
# alloy-signer-gcp = { version = "2.0.0-rc.0", default-features = false }
# alloy-signer-ledger = { version = "2.0.0-rc.0", default-features = false }
# alloy-signer-local = { version = "2.0.0-rc.0", default-features = false }
# alloy-signer-trezor = { version = "2.0.0-rc.0", default-features = false }
alloy-transport = { version = "2.0.0-rc.0", default-features = false }
# alloy-transport-http = { version = "2.0.0-rc.0", default-features = false }
# alloy-transport-ipc = { version = "2.0.0-rc.0", default-features = false }
# alloy-transport-ws = { version = "2.0.0-rc.0", default-features = false }
# ## alloy-core
alloy-dyn-abi = "1.5.2"
alloy-json-abi = "1.5.2"
alloy-primitives = { version = "1.5.2", features = [
    "getrandom",
    "rand",
    "map-foldhash",
] }
# alloy-sol-macro-expander = "1.5.2"
# alloy-sol-macro-input = "1.5.2"
alloy-sol-types = "1.5.2"
# syn-solidity = "1.5.2"
alloy-chains = "=0.2.30"
# alloy-rlp = "0.3"
# alloy-trie = "0.6.0"
# ## op-alloy
# op-alloy-rpc-types = "0.5.0"
# op-alloy-consensus = "0.5.0"
# ## cli
# anstream = "0.6.15"
# anstyle = "1.0.8"
# terminal_size = "0.4"
# # macros
# proc-macro2 = "1.0.82"
# quote = "1.0"
# syn = "2.0"
# async-trait = "0.1"
# derive_more = { version = "1.0", features = ["full"] }
thiserror = "1"
# # bench
# divan = "0.1"
# # misc
# auto_impl = "1"
# walkdir = "2"
# prettyplease = "0.2.20"
# ahash = "0.8"
# base64 = "0.22"
# chrono = { version = "0.4", default-features = false, features = [
#     "clock",
#     "std",
# ] }
# axum = "0.7"
# color-eyre = "0.6"
# comfy-table = "7"
# dunce = "1"
# evm-disassembler = "0.5"
# evmole = "0.5"
# eyre = "0.6"
# figment = "0.10"
# futures = "0.3"
# hyper = "1.0"
# indexmap = "2.2"
itertools = "0.13"
# jsonpath_lib = "0.3"
# k256 = "0.13"
# mesc = "0.3"
# num-format = "0.4.4"
parking_lot = "0.12"
# proptest = "1"
rand = { version = "0.8", features = ["small_rng"] }
# rayon = "1"
# reqwest = { version = "0.12", default-features = false }
# semver = "1"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = { version = "1.0", features = ["arbitrary_precision"] }
# similar-asserts = "1.5"
# soldeer-commands = "=0.4.1"
# strum = "0.26"
# tempfile = "3.10"
# tikv-jemallocator = "0.6"
# tokio = "1"
# toml = "0.8"
# tower = "0.4"
# tower-http = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
# url = "2"
# vergen = { version = "8", default-features = false }
# yansi = { version = "1.0", features = ["detect-tty", "detect-env"] }
samotop-async-trait = "0.2.1"
serde_closure = "0.3.3"
bincode = "1.0"
tokio-test = "*"
rustc-hash = "2.1.1"
ahash = "0.8.12"
linked-hash-map = "0.5.6"
rand_chacha = "0.9.0"
rand_core = "0.9.3"
rand_pcg = "0.9.0"
rip_shuffle = "0.2"
bytebuffer = "2.3.0"
sscanf="0.5.0"
scan_fmt = "0.2.6"
cfg-if = "1.*"
sha2 = "0.10"
aes = "0.8"
openssl = "0.10"
ed25519-dalek = {version = "2.1",features =["batch"]}
getrandom = "0.2"
subtle = "2.5"
# aes = "0.8"
# num-bigint = "0.4"
# num-traits = "0.2"
# ark-ff = "0.4" # 替换为你使用的具体的域实现
ark-bn254 = "0.5" # 示例使用 BN254 曲线的 Fr


[workspace.dependencies.uuid]
version = "1.23.1"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[patch.crates-io]
# https://github.com/rust-cli/rexpect/pull/106
# rexpect = { git = "https://github.com/rust-cli/rexpect", rev = "2ed0b1898d7edaf6a85bedbae71a01cc578958fc" }
## alloy-core
# alloy-dyn-abi = { path = "../../alloy-rs/core/crates/dyn-abi" }
# alloy-json-abi = { path = "../../alloy-rs/core/crates/json-abi" }
# alloy-primitives = { path = "../../alloy-rs/core/crates/primitives" }
# alloy-sol-macro = { path = "../../alloy-rs/core/crates/sol-macro" }
# alloy-sol-macro-expander = { path = "../../alloy-rs/core/crates/sol-macro-expander" }
# alloy-sol-macro-input = { path = "../../alloy-rs/core/crates/sol-macro-input" }
# alloy-sol-type-parser = { path = "../../alloy-rs/core/crates/sol-type-parser" }
# alloy-sol-types = { path = "../../alloy-rs/core/crates/sol-types" }
# syn-solidity = { path = "../../alloy-rs/core/crates/syn-solidity" }
## alloy
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
# alloy-eip5792 = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-ens = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-rpc-types-beacon = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-serde = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
# alloy-signer-aws = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
# alloy-signer-gcp = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-signer-ledger = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-signer-trezor = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
# alloy-signer-turnkey = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "100a3325ac4d624f3eb0bd404125750e76edf8ca" }
# ## alloy-evm
alloy-evm = { git = "https://github.com/alloy-rs/evm.git", branch = "alloy-2.0" }
# ## op-alloy / alloy-op-evm
op-alloy-consensus = { git = "https://github.com/foundry-rs/optimism", branch = "alloy-2.0" }
op-alloy-rpc-types = { git = "https://github.com/foundry-rs/optimism", branch = "alloy-2.0" }
op-alloy = { git = "https://github.com/foundry-rs/optimism", branch = "alloy-2.0" }
alloy-op-evm = { git = "https://github.com/foundry-rs/optimism", branch = "alloy-2.0" }
alloy-op-hardforks = { git = "https://github.com/foundry-rs/optimism", branch = "alloy-2.0" }
## revm
# revm = { git = "https://github.com/bluealloy/revm.git", rev = "7e59936" }
# op-revm = { git = "https://github.com/bluealloy/revm.git", rev = "7e59936" }
revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors.git", branch = "alloy-2.0" }
## foundry
foundry-fork-db = { git = "https://github.com/foundry-rs/foundry-fork-db", branch = "alloy-2.0" }
# solar
solar = { package = "solar-compiler", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-interface = { package = "solar-interface", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-ast = { package = "solar-ast", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-sema = { package = "solar-sema", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
