[package]
name = "zkay-derive-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
heck={ workspace = true }
quote={ workspace = true }
syn={ workspace = true }
proc-macro2={workspace=true}