[package]
name = "zkay-derive"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
[dependencies]
zkay-derive-core={workspace=true}
syn={workspace=true}
proc-macro2={workspace=true}
convert_case={workspace=true}
quote={ workspace = true }
heck={ workspace = true }
enum_dispatch={ workspace = true }