[package]
name = "zkay-rsnark"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]

[dependencies]
num-bigint={workspace = true}
num-traits={workspace = true}
eyre={workspace = true}
dyn-clone={workspace = true}
rand={workspace = true}
rccell={workspace = true}