[package]
name = "zkay-rsnark"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]

[dependencies]
num-bigint={workspace = true}
num-traits={workspace = true}
eyre={workspace = true}
dyn-clone={workspace = true}
rand={workspace = true}
rccell={workspace = true}
zkay-derive={workspace = true}
strum={workspace = true}
strum_macros={workspace = true}
enum_dispatch={ workspace = true }
lazy_static={workspace = true}
parking_lot={workspace = true}
serde_closure={workspace = true}
serde={workspace = true}
serde_json={workspace = true}
bincode={workspace = true}
