[package]
name = "zkay_rs"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# proc-macro = true
[[bin]]
name = "zkay"
path = "src/main.rs"
[dependencies]
zkay-derive = { workspace = true }
circuit_helper={workspace=true}
 circuit_generation={workspace = true }
 proving_scheme={workspace = true }
 transformation={workspace = true }
 privacy={workspace = true }
 solidity={workspace = true }
 zkay-config={workspace = true }
 zkay-transaction={workspace = true }
 zkay-utils={workspace = true }
 zkay_ast={workspace = true }
 zkay-examples={workspace = true }
 ast-builder={workspace = true }
clap = { workspace = true }
lazy_static = { workspace = true }
antlr-rust = { workspace = true }
anyhow = { workspace = true }
path-absolutize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
regex ={ workspace = true }
semver_rs = { workspace = true }
app_dirs2 = { workspace = true }
zkp-u256 = { workspace = true }
textwrap={ workspace = true }
eyre ={ workspace = true }
num_cpus={ workspace = true }
rayon={ workspace = true }
once_cell={ workspace = true }
tiny-keccak = { workspace = true }
hex={ workspace = true }
rs_sha512={ workspace = true }
log={ workspace = true }
env_logger={ workspace = true }
chrono={ workspace = true }
bitflags={ workspace = true }
dyn-clone ={ workspace = true }
uuid={ workspace = true }