[package]
name = "zkay-supercop"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]

[dependencies]

num-bigint={workspace = true}
num-traits={workspace = true}
num-derive={workspace = true}
num_enum={workspace = true}
eyre={workspace = true}
dyn-clone={workspace = true}
rand={workspace = true}
rccell={workspace = true}
zkay-derive={workspace = true}
strum={workspace = true}
strum_macros={workspace = true}
enum_dispatch={ workspace = true }
lazy_static={workspace = true}
parking_lot={workspace = true}
serde_closure={workspace = true}
serde={workspace = true}
serde_json={workspace = true}
bincode={workspace = true}
backtrace-on-stack-overflow={workspace=true}
nohash-hasher={workspace = true}
rustc-hash ={workspace = true}
ahash={workspace = true}
linked-hash-map={workspace = true}
rand_chacha={workspace = true}
rand_pcg={workspace = true}
rand_core={workspace = true}
rip_shuffle={workspace = true}
bytebuffer={workspace=true}
clap = { workspace = true }
sha2={workspace = true}
aes={workspace = true}
openssl = {workspace = true}
ed25519-dalek = {workspace = true}
getrandom = {workspace = true}
subtle = {workspace = true}

ark-ff = {workspace = true} # 替换为你使用的具体的域实现
ark-bn254 = {workspace = true} # 示例使用 BN254 曲线的 Fr