[package]
name = "zkay-config"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
[dependencies]
lazy_static = { workspace = true }
app_dirs2 = { workspace = true }
semver_rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }