[package]
name = "jsnark_interface"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
[dependencies]
rccell = { workspace = true }
circuit-helper-config={workspace=true}
zkay-config={workspace = true }
zkay-utils={workspace = true }
# zkay_ast={workspace = true }
lazy_static = { workspace = true }
hex={ workspace = true }